--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
       </label> <br> <br>
       <label for="reason">Why Should We Hire This Person? <br>
         <textarea id="reason" name="reason" rows="4" cols="30"></textarea>
-      </label>
+      </label> <br> <br>
       <input type="checkbox" id="consent" name="consent" value="Consent" class="inline" required />
       <label for="consent">I have received permission from the referred to share their contact information.</label> <br>
       <input type="button" value="REFER" id="refer"/>
